enhacement: added update role feature
