# packages/backend/src/modules/Role/application/update/IUpdateRoleRequest.ts
@@ -1,0 +1,5 @@
+export interface IUpdateRoleRequest {
+  id: string;
+  roleName: string;
+  roleState: string;
+}
