# packages/backend/src/modules/Role/infrastructure/api/roleRoutes.ts
@@ -7,19 +7,34 @@ import { roleContainer } from '../../roleContainer';
 import httpStatus from 'http-status';
 import { ResponseBase } from '../../../Shared/application/ResponseBase';
 import { RoleIdAlreadyExistError } from '../../domain/errors/RoleIdAlreadyExistError';
+import { RoleIdNotExistError } from '../../domain/errors/RoleIdNotExistError';
+import { UpdateRoleValidator } from '../../application/update/UpdateRoleValidator';
 
 const router = Router();
 
-const controller: IController = roleContainer.resolve('CreateRoleController');
+const createController: IController = roleContainer.resolve('CreateRoleController');
+const updateController: IController = roleContainer.resolve('UpdateRoleController');
 
 router.post('/', CreateRoleValidator, validateReqSchema, async (req: Request, res: Response, next: NextFunction) => {
   /**
+    #swagger.tags = ['Roles']
     #swagger.requestBody = {
         required: true,
         schema: { $ref: "#/components/schemas/CreateRoleRequest" }
     }
      */
-  await controller.run(req, res, next);
+  await createController.run(req, res, next);
+});
+
+router.put('/:id', UpdateRoleValidator, validateReqSchema, async (req: Request, res: Response, next: NextFunction) => {
+  /**
+    #swagger.tags = ['Roles']
+    #swagger.requestBody = {
+        required: true,
+        schema: { $ref: "#/components/schemas/UpdateRoleRequest" }
+    }
+     */
+  await updateController.run(req, res, next);
 });
 
 router.use((err: Error, req: Request, res: Response, next: NextFunction) => {
@@ -29,6 +44,14 @@ router.use((err: Error, req: Request, res: Response, next: NextFunction) => {
       .json(
         new ResponseBase<void>(false, httpStatus.BAD_REQUEST, httpStatus[400], 'Error registering new Role', undefined, [
           "Role with this 'id' already has been registred",
+        ]),
+      );
+  } else if (err instanceof RoleIdNotExistError) {
+    res
+      .status(400)
+      .json(
+        new ResponseBase<void>(false, httpStatus.BAD_REQUEST, httpStatus[400], 'Error updating Role', undefined, [
+          "Role with this 'id' was not been registred",
         ]),
       );
   } else {
